fix: incorrect links
- need to be relative to the repo path

--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
 
             <!-- Hamburger nav -->
             <div id="navLinks" class="nav-links">
-              <a href="/about">About Us</a>
-              <a href="/vendor">Become a Vendor</a>
+              <a href="about.html">About Us</a>
             </div>
 
             <!-- Desktop category bar -->
             <div class="category-bar desktop-only">
-              <a href="/about">About Us</a>
-              <a href="/vendor">Become a Vendor</a>
+              <a href="about.html">About Us</a>
             </div>
           </div>
         </div>
@@ -41,8 +39,8 @@
       <footer class="footer">
         <div class="footer-content">
           <div class="footer-links">
-          <a href="/about.html">About Us</a>
-          <a href="/terms-of-service">Terms of Service</a>
+          <a href="about.html">About Us</a>
+          <a href="terms-of-service.html">Terms of Service</a>
           </div>
           <div class="footer-copy">
             &copy; <span id="year"></span> Tapestral. All rights reserved.
