--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -71,12 +71,10 @@
               <a href="/" class="logo">Tapestral</a>
             </div>
             <div id="navLinks" class="nav-links">
-              <a href="/about.html">About Us</a>
-              <a href="/vendor">Become a Vendor</a>
+              <a href="about.html">About Us</a>
             </div>
             <div class="category-bar desktop-only">
-              <a href="/about.html">About Us</a>
-              <a href="/vendor">Become a Vendor</a>
+              <a href="about.html">About Us</a>
             </div>
           </div>
         </div>
@@ -159,8 +157,8 @@
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-links">
-          <a href="/about.html">About Us</a>
-          <a href="/terms-of-service">Terms of Service</a>
+          <a href="about.html">About Us</a>
+          <a href="terms-of-service.html">Terms of Service</a>
         </div>
         <div class="footer-copy">
           &copy; <span id="year"></span> Tapestral. All rights reserved.
