fix: add base ref

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <base href="/tapestral/">
   <title>Tapestral – Coming Soon</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -13,7 +14,7 @@
           <div class="nav-content">
             <!-- Top nav -->
             <div class="top-nav-row">
-              <a href="/" class="logo">Tapestral</a>
+              <a href="index.html" class="logo">Tapestral</a>
             </div>
 
             <!-- Hamburger nav -->
