--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tapestral – Terms of Service</title>
+  <base href="/tapestral/">
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -68,7 +69,7 @@
         <div class="nav-container">
           <div class="nav-content">
             <div class="top-nav-row">
-              <a href="/" class="logo">Tapestral</a>
+              <a href="index.html" class="logo">Tapestral</a>
             </div>
             <div id="navLinks" class="nav-links">
               <a href="about.html">About Us</a>
