--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>About Tapestral</title>
+  <base href="/tapestral/">
   <link rel="stylesheet" href="style.css" />
   <style>
 .about-hero {
@@ -137,7 +138,7 @@
         <div class="nav-container">
           <div class="nav-content">
             <div class="top-nav-row">
-              <a href="/" class="logo">Tapestral</a>
+              <a href="index.html" class="logo">Tapestral</a>
             </div>
             <div id="navLinks" class="nav-links">
               <a href="about.html">About Us</a>
