fix: index routing

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
         <div class="nav-container">
           <div class="nav-content">
             <div class="top-nav-row">
-              <a href="index.html" class="logo">Tapestral</a>
+              <a href="/tapestral/about.html" class="logo">Tapestral</a>
             </div>
             <div id="navLinks" class="nav-links">
               <a href="about.html">About Us</a>
