fix: third times the charm?

--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>About Tapestral</title>
-  <base href="/tapestral/">
   <link rel="stylesheet" href="style.css" />
   <style>
 .about-hero {
@@ -138,7 +137,7 @@
         <div class="nav-container">
           <div class="nav-content">
             <div class="top-nav-row">
-              <a href="/tapestral/about.html" class="logo">Tapestral</a>
+              <a href="index.html" class="logo">Tapestral</a>
             </div>
             <div id="navLinks" class="nav-links">
               <a href="about.html">About Us</a>
