--- a/index.html
+++ b/index.html
@@ -2,9 +2,208 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <base href="/tapestral/">
   <title>Tapestral – Coming Soon</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+  font-family: 'Inter', sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+.site-wrapper {
+  min-height: 100vh;
+  background: linear-gradient(180deg, #fafafa 0%, #f5f5f5 100%);
+}
+
+main {
+  padding-top: 0;
+}
+
+.nav-container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.nav-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.top-nav-row {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
+  margin-top: 12px;
+  color: white;
+}
+
+.logo {
+  font-family: 'Playfair Display', serif;
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+  white-space: nowrap;
+  width: fit-content;
+}
+
+.hamburger {
+  font-size: 24px;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.nav-links {
+  display: none;
+  flex-direction: column;
+  color: white;
+}
+
+.nav-links a {
+  color: #525252;
+  text-decoration: none;
+  padding: 8px 12px;
+  display: flex;
+  align-items: center;
+}
+
+.hero-header {
+  position: relative;
+  height: 50vh; /* half viewport height */
+  background-image: url("images/tapestral_header.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.hero-header::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+
+nav {
+  position: relative;
+  z-index: 2;
+  background-color: transparent;
+  border-bottom: none;
+  padding: 0;
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 64px;
+    left: 0;
+    width: 100vw;
+    background-color: #ffffff;
+    text-align: left;
+    padding: 16px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+    z-index: 10;
+  }
+
+  .nav-links.open {
+    display: flex;
+  }
+
+  .nav-links a {
+    color: black;
+  }
+}
+
+/* Desktop styles */
+@media (min-width: 769px) {
+  .desktop-only {
+    display: flex;
+  }
+
+  .category-bar {
+    gap: 12px;
+    padding: 8px 12px 8px 0;
+    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+    width: 100vw;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    z-index: 3;
+    color: white;
+  }
+
+  .category-bar a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    padding: 8px 12px;
+    font-size: 14px;
+    font-weight: 400;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    white-space: nowrap;
+  }
+
+  .category-bar a:hover {
+    text-decoration: underline;
+  }
+}
+
+/* Footer */
+.footer {
+  background-color: #f1f1f1;
+  color: #333;
+  padding: 24px 16px;
+  border-top: 1px solid #ddd;
+  margin-top: 48px;
+}
+
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 12px;
+}
+
+.footer-links {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+}
+
+.footer-links a {
+  color: #333;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
+
+.footer-copy {
+  font-size: 12px;
+  color: #666;
+}
+  </style>
 </head>
 <body>
   <div class="site-wrapper">
