--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4TVK733BFR"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4TVK733BFR');
+  </script>
   <meta charset="UTF-8">
   <title>Tapestral – Terms of Service</title>
   <style>
