--- a/index.html
+++ b/index.html
@@ -1,242 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4TVK733BFR"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4TVK733BFR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-4TVK733BFR');
-    </script>  
-    <meta charset="UTF-8" />
-    <title>Tapestral – Coming Soon</title>
-    <style>
-     body {
-        font-family: 'Inter', sans-serif;
-        margin: 0;
-        padding: 0;
-        overflow-x: hidden;
+  gtag('config', 'G-4TVK733BFR');
+</script>
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tapestral – Coming Soon</title>
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
     }
 
     .site-wrapper {
-        min-height: 100vh;
-        background: linear-gradient(180deg, #fafafa 0%, #f5f5f5 100%);
+      min-height: 100vh;
+      background: linear-gradient(180deg, #fafafa 0%, #f5f5f5 100%);
     }
 
     main {
-        padding-top: 0;
+      padding-top: 0;
     }
 
-    .nav-container {
-        width: 100%;
-        margin: 0 auto;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    .nav-content {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .top-nav-row {
-        display: grid;
-        grid-template-columns: auto 1fr auto;
-        align-items: center;
-        gap: 12px;
-        width: 100%;
-        margin-top: 12px;
-        color: white;
-    }
-
-    .logo {
-        font-family: 'Playfair Display', serif;
-        font-size: 24px;
-        color: white;
-        text-decoration: none;
-        white-space: nowrap;
-        width: fit-content;
-    }
-
-    .hamburger {
-        font-size: 24px;
-        background: none;
-        border: none;
-        color: white;
-        cursor: pointer;
-    }
-
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        color: white;
-    }
-
-    .nav-links a {
-        color: #525252;
-        text-decoration: none;
-        padding: 8px 12px;
-        display: flex;
-        align-items: center;
-    }
-
+    /* Hero Section */
     .hero-header {
-        position: relative;
-        height: 50vh; /* half viewport height */
-        background-image: url("images/tapestral_header.png");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
+      position: relative;
+      height: 70vh;
+      background-image: url("images/tapestral_header.png");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
     }
 
     .hero-header::before {
-        content: '';
-        position: absolute;
-        inset: 0;
-        background: rgba(0, 0, 0, 0.3);
-        z-index: 1;
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.35);
+      z-index: 1;
     }
 
-    nav {
-        position: relative;
-        z-index: 2;
-        background-color: transparent;
-        border-bottom: none;
-        padding: 0;
+    .hero-overlay {
+      position: relative;
+      z-index: 2;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; /* title in center, nav bottom */
+      align-items: center;
+      padding: 2rem;
+      color: white;
     }
 
-    /* Mobile styles */
+    .hero-title {
+      font-family: 'Playfair Display', serif;
+      font-size: 4rem;
+      font-weight: bold;
+      margin: auto 0;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
+      color: #f1f1f1;
+    }
+
+    .hero-title a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    /* Desktop Nav */
+    .hero-nav {
+      display: flex;
+      gap: 2rem;
+      margin-bottom: 1rem;
+    }
+
+    .hero-nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.2rem;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+
+    .hero-nav a:hover {
+      text-decoration: underline;
+      color: #ffcc00;
+    }
+
+    /* Mobile Hamburger */
+    .hamburger {
+      display: none;
+      font-size: 28px;
+      background: none;
+      border: none;
+      color: white;
+      cursor: pointer;
+      position: absolute;
+      top: 26px;
+      right: 14px;
+      z-index: 3;
+    }
+
+    .mobile-nav {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      right: 16px;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      z-index: 3;
+    }
+
+    .mobile-nav a {
+      color: black;
+      text-decoration: none;
+      padding: 0.5rem 0;
+    }
+
+    .mobile-nav a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive */
     @media (max-width: 768px) {
-        .nav-links {
-            display: none;
-            flex-direction: column;
-            position: absolute;
-            top: 64px;
-            left: 0;
-            width: 100vw;
-            background-color: #ffffff;
-            text-align: left;
-            padding: 16px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
-            z-index: 10;
-        }
-
-        .nav-links.open {
-            display: flex;
-        }
-
-        .nav-links a {
-            color: black;
-        }
-    }
-
-    /* Desktop styles */
-    @media (min-width: 769px) {
-        .desktop-only {
-            display: flex;
-        }
-
-        .category-bar {
-            gap: 12px;
-            padding: 8px 12px 8px 0;
-            background-color: rgba(255, 255, 255, 0.25);
-            backdrop-filter: blur(6px);
-            -webkit-backdrop-filter: blur(6px);
-            width: 100vw;
-            box-sizing: border-box;
-            display: flex;
-            flex-wrap: wrap;
-            position: relative;
-            z-index: 3;
-            color: white;
-        }
-
-        .category-bar a {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            height: 40px;
-            padding: 8px 12px;
-            font-size: 14px;
-            font-weight: 400;
-            color: white;
-            text-decoration: none;
-            cursor: pointer;
-            white-space: nowrap;
-        }
-
-        .category-bar a:hover {
-            text-decoration: underline;
-        }
+      .hero-nav { display: none; }
+      .hamburger { display: block; }
     }
 
     /* Footer */
     .footer {
-        background-color: #f1f1f1;
-        color: #333;
-        padding: 24px 16px;
-        border-top: 1px solid #ddd;
-        margin-top: 48px;
+      background-color: #f1f1f1;
+      color: #333;
+      padding: 24px 16px;
+      border-top: 1px solid #ddd;
+      margin-top: 48px;
     }
 
     .footer-content {
-        max-width: 1200px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 12px;
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      gap: 12px;
     }
 
     .footer-links {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 16px;
-        justify-content: center;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 16px;
+      justify-content: center;
     }
 
     .footer-links a {
-        color: #333;
-        text-decoration: none;
-        font-size: 14px;
+      color: #333;
+      text-decoration: none;
+      font-size: 14px;
     }
 
     .footer-links a:hover {
-        text-decoration: underline;
+      text-decoration: underline;
     }
 
     .footer-copy {
-        font-size: 12px;
-        color: #666;
+      font-size: 12px;
+      color: #666;
     }
   </style>
 </head>
 <body>
   <div class="site-wrapper">
     <div class="hero-header">
-      <nav>
-        <div class="nav-container">
-          <div class="nav-content">
-            <!-- Top nav -->
-            <div class="top-nav-row">
-              <a href="index.html" class="logo">Tapestral</a>
-            </div>
+      <div class="hero-overlay">
+        <h1 class="hero-title"><a href="index.html">Tapestral</a></h1>
 
-            <!-- Hamburger nav -->
-            <div id="navLinks" class="nav-links">
-              <a href="about.html">About Us</a>
-            </div>
+        <!-- Desktop Nav -->
+        <nav class="hero-nav">
+          <a href="about.html">About Us</a>
+          <a href="terms-of-service.html">Terms of Service</a>
+        </nav>
 
-            <!-- Desktop category bar -->
-            <div class="category-bar desktop-only">
-              <a href="about.html">About Us</a>
-            </div>
-          </div>
-        </div>
-      </nav>
+        <!-- Mobile Nav -->
+        <button class="hamburger" onclick="toggleMenu()">☰</button>
+        <nav id="mobileNav" class="mobile-nav">
+          <a href="about.html">About Us</a>
+          <a href="terms-of-service.html">Terms of Service</a>
+        </nav>
+      </div>
     </div>
 
     <main>
@@ -248,8 +216,8 @@
       <footer class="footer">
         <div class="footer-content">
           <div class="footer-links">
-          <a href="about.html">About Us</a>
-          <a href="terms-of-service.html">Terms of Service</a>
+            <a href="about.html">About Us</a>
+            <a href="terms-of-service.html">Terms of Service</a>
           </div>
           <div class="footer-copy">
             &copy; <span id="year"></span> Tapestral. All rights reserved.
@@ -259,6 +227,15 @@
     </main>
   </div>
 
-  <script src="main.js"></script>
+  <script>
+    // Year auto-update
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Toggle mobile nav
+    function toggleMenu() {
+      const nav = document.getElementById("mobileNav");
+      nav.style.display = nav.style.display === "flex" ? "none" : "flex";
+    }
+  </script>
 </body>
 </html>
