--- a/index.html
+++ b/index.html
@@ -101,41 +101,85 @@
       color: #ffcc00;
     }
 
-    /* Mobile Hamburger */
     .hamburger {
-      display: none;
-      font-size: 28px;
-      background: none;
-      border: none;
-      color: white;
-      cursor: pointer;
-      position: absolute;
-      top: 26px;
-      right: 14px;
-      z-index: 3;
+        display: none;
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+        width: 28px;
+        height: 28px;
+        cursor: pointer;
+        z-index: 3;
+        background: transparent;
+        border: none;
+        padding: 0;
     }
 
+    .hamburger span {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: white;
+        border-radius: 2px;
+        transform-origin: center;
+        transition: all 0.3s ease;
+    }
+
+    .hamburger span:nth-child(1) { top: 8px; }
+    .hamburger span:nth-child(2) { top: 16px; }
+    .hamburger span:nth-child(3) { top: 24px; }
+
+    .hamburger.active span:nth-child(1) {
+        top: 16px;
+        transform: rotate(45deg);
+    }
+
+    .hamburger.active span:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active span:nth-child(3) {
+        top: 16px;
+        transform: rotate(-45deg);
+    }
+
+
     .mobile-nav {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 60px;
-      right: 16px;
-      background: white;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      z-index: 3;
+        flex-direction: column;
+        position: absolute;
+        top: 80px;
+        right: 24px;
+        background: white;
+        padding: 1rem;
+        border-radius: 8px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+        z-index: 3;
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transform: translateY(-10px);
+        transition: all 0.3s ease;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .mobile-nav.open {
+        max-height: 500px;
+        opacity: 1;
+        transform: translateY(0);
     }
 
     .mobile-nav a {
-      color: black;
-      text-decoration: none;
-      padding: 0.5rem 0;
+        color: black;
+        text-decoration: none;
+        padding: 0.5rem 0;
+        font-weight: 500;
     }
 
     .mobile-nav a:hover {
-      text-decoration: underline;
+        text-decoration: underline;
     }
 
     /* Responsive */
@@ -199,7 +243,11 @@
         </nav>
 
         <!-- Mobile Nav -->
-        <button class="hamburger" onclick="toggleMenu()">☰</button>
+        <button class="hamburger" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <nav id="mobileNav" class="mobile-nav">
           <a href="about.html">About Us</a>
           <a href="terms-of-service.html">Terms of Service</a>
@@ -233,8 +281,11 @@
 
     // Toggle mobile nav
     function toggleMenu() {
-      const nav = document.getElementById("mobileNav");
-      nav.style.display = nav.style.display === "flex" ? "none" : "flex";
+        const nav = document.getElementById("mobileNav");
+        const burger = document.querySelector(".hamburger");
+        
+        nav.classList.toggle("open");
+        burger.classList.toggle("active");
     }
   </script>
 </body>
