feat: add information

--- a/about.html
+++ b/about.html
@@ -387,13 +387,13 @@
       <div class="about-text">
         <h2>Our Mission</h2>
         <p>
-          Tapestral is built to empower interior designers by streamlining access to curated, high-quality furniture direct from manufacturers.
+          Tapestral is built to empower interior designers by streamlining access to curated, high-quality furniture direct from vendors.
           We eliminate friction in sourcing, quoting, and order management — so you can stay focused on delivering exceptional spaces.
         </p>
 
         <h2>What We Offer</h2>
         <ul>
-          <li>Direct-to-designer access to vetted manufacturers</li>
+          <li>Direct-to-designer access to vetted vendors</li>
           <li>The Gallery, organize and present curated selections</li>
           <li>Transparent order tracking and downloadable documents</li>
           <li>Simple pricing, clear terms, and designer-focused service</li>
@@ -415,7 +415,7 @@
             <p class="founder-title">Chief Strategy Officer</p>
             <p>
               Combining a background in cybersecurity and logistics, Dylan brings operational expertise and deep industry insight 
-              from years working with manufacturers and scaling supply chains. He ensures Tapestral is built to serve real B2B needs.
+              from years working with vendors and scaling supply chains. He ensures Tapestral is built to serve real business to business needs.
             </p>
           </div>
         </div>
