--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         </div>
         <div class="feature-card">
           <h3>Direct Access to Vendors</h3>
-          <p>Purchase from pieces from trusted vendors directly, ensuring quality and transparency.</p>
+          <p>Purchase pieces from trusted vendors directly, ensuring quality and transparency.</p>
         </div>
         <div class="feature-card">
           <h3>Fast, Reliable Technology</h3>
