--- a/about.html
+++ b/about.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4TVK733BFR"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'G-4TVK733BFR');
-    </script>    
+        gtag('config', 'G-4TVK733BFR');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Tapestral</title>
@@ -30,161 +31,174 @@
             padding-top: 0;
         }
 
-    /* Hero Section */
-    .hero-header {
-      position: relative;
-      height: 70vh;
-      background-image: url("images/tapestral_header.png");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
+        /* Hero Section */
+        .hero-header {
+            position: relative;
+            height: 70vh;
+            background-image: url("images/tapestral_header.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
 
-    .hero-header::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.35);
-      z-index: 1;
-    }
+        .hero-header::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.35);
+            z-index: 1;
+        }
 
-    .hero-overlay {
-      position: relative;
-      z-index: 2;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      padding: 2rem;
-      color: white;
-    }
+        .hero-overlay {
+            position: relative;
+            z-index: 2;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 2rem;
+            color: white;
+        }
 
-    .hero-title {
-      font-family: 'Playfair Display', serif;
-      font-size: 4rem;
-      font-weight: bold;
-      margin: auto 0;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
-      color: #f1f1f1;
-    }
+        .hero-title {
+            font-family: 'Playfair Display', serif;
+            font-size: 4rem;
+            font-weight: bold;
+            margin: auto 0;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
+            color: #f1f1f1;
+        }
 
-    .hero-title a {
-      color: inherit;
-      text-decoration: none;
-    }
+        .hero-title a {
+            color: inherit;
+            text-decoration: none;
+        }
 
-    /* Desktop Nav */
-    .hero-nav {
-      display: flex;
-      gap: 2rem;
-      margin-bottom: 1rem;
-    }
+        /* Desktop Nav */
+        .hero-nav {
+            display: flex;
+            gap: 2rem;
+            margin-bottom: 1rem;
+        }
 
-    .hero-nav a {
-      color: white;
-      text-decoration: none;
-      font-size: 1.2rem;
-      font-weight: 500;
-      transition: color 0.3s ease;
-    }
+        .hero-nav a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.2rem;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
 
-    .hero-nav a:hover {
-      text-decoration: underline;
-      color: #ffcc00;
-    }
+        .hero-nav a:hover {
+            text-decoration: underline;
+            color: #ffcc00;
+        }
 
-    .hamburger {
-        display: none;
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-        width: 28px;
-        height: 28px;
-        cursor: pointer;
-        z-index: 3;
-        background: transparent;
-        border: none;
-        padding: 0;
-    }
+        .hamburger {
+            display: none;
+            position: absolute;
+            top: 2rem;
+            right: 2rem;
+            width: 28px;
+            height: 28px;
+            cursor: pointer;
+            z-index: 3;
+            background: transparent;
+            border: none;
+            padding: 0;
+        }
 
-    .hamburger span {
-        position: absolute;
-        left: 0;
-        width: 100%;
-        height: 4px;
-        background: white;
-        border-radius: 2px;
-        transform-origin: center;
-        transition: all 0.3s ease;
-    }
+        .hamburger span {
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: white;
+            border-radius: 2px;
+            transform-origin: center;
+            transition: all 0.3s ease;
+        }
 
-    .hamburger span:nth-child(1) { top: 8px; }
-    .hamburger span:nth-child(2) { top: 16px; }
-    .hamburger span:nth-child(3) { top: 24px; }
+        .hamburger span:nth-child(1) {
+            top: 8px;
+        }
 
-    .hamburger.active span:nth-child(1) {
-        top: 16px;
-        transform: rotate(45deg);
-    }
+        .hamburger span:nth-child(2) {
+            top: 16px;
+        }
 
-    .hamburger.active span:nth-child(2) {
-        opacity: 0;
-    }
+        .hamburger span:nth-child(3) {
+            top: 24px;
+        }
 
-    .hamburger.active span:nth-child(3) {
-        top: 16px;
-        transform: rotate(-45deg);
-    }
+        .hamburger.active span:nth-child(1) {
+            top: 16px;
+            transform: rotate(45deg);
+        }
+
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.active span:nth-child(3) {
+            top: 16px;
+            transform: rotate(-45deg);
+        }
 
 
-    .mobile-nav {
-        flex-direction: column;
-        position: absolute;
-        top: 80px;
-        right: 24px;
-        background: white;
-        padding: 1rem;
-        border-radius: 8px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-        z-index: 3;
-        max-height: 0;
-        overflow: hidden;
-        opacity: 0;
-        transform: translateY(-10px);
-        transition: all 0.3s ease;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
+        .mobile-nav {
+            flex-direction: column;
+            position: absolute;
+            top: 80px;
+            right: 24px;
+            background: white;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            z-index: 3;
+            max-height: 0;
+            overflow: hidden;
+            opacity: 0;
+            transform: translateY(-10px);
+            transition: all 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
 
-    .mobile-nav.open {
-        max-height: 500px;
-        opacity: 1;
-        transform: translateY(0);
-    }
+        .mobile-nav.open {
+            max-height: 500px;
+            opacity: 1;
+            transform: translateY(0);
+        }
 
-    .mobile-nav a {
-        color: black;
-        text-decoration: none;
-        padding: 0.5rem 0;
-        font-weight: 500;
-    }
+        .mobile-nav a {
+            color: black;
+            text-decoration: none;
+            padding: 0.5rem 0;
+            font-weight: 500;
+        }
 
-    .mobile-nav a:hover {
-        text-decoration: underline;
-    }
+        .mobile-nav a:hover {
+            text-decoration: underline;
+        }
 
-    /* Responsive */
-    @media (max-width: 768px) {
-      .hero-nav { display: none; }
-      .hamburger { display: block; }
-    }
+        /* Responsive */
+        @media (max-width: 768px) {
+            .hero-nav {
+                display: none;
+            }
+
+            .hamburger {
+                display: block;
+            }
+        }
 
         /* Footer */
         .footer {
@@ -346,114 +360,130 @@
             .founder-cards {
                 flex-direction: row;
             }
+
             .founder-card {
                 flex: 1;
             }
         }
-  </style>
+    </style>
 </head>
+
 <body>
-  <div class="site-wrapper">
-    <div class="hero-header">
-      <div class="hero-overlay">
-        <h1 class="hero-title"><a href="index.html">Tapestral</a></h1>
+    <div class="site-wrapper">
+        <div class="hero-header">
+            <div class="hero-overlay">
+                <h1 class="hero-title"><a href="index.html">Tapestral</a></h1>
 
-        <!-- Desktop Nav -->
-        <nav class="hero-nav">
-          <a href="about.html">About Us</a>
-          <a href="terms-of-service.html">Terms of Service</a>
-        </nav>
+                <!-- Desktop Nav -->
+                <nav class="hero-nav">
+                    <a href="about.html">About Us</a>
+                    <a href="designer-access.html">Designer access</a>
+                    <a href="become-a-vendor.html">Become a Vendor</a>
+                    <a href="terms-of-service.html">Terms of Service</a>
+                </nav>
 
-        <!-- Mobile Nav -->
-        <button class="hamburger" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-        <nav id="mobileNav" class="mobile-nav">
-          <a href="about.html">About Us</a>
-          <a href="terms-of-service.html">Terms of Service</a>
-        </nav>
-      </div>
+                <!-- Mobile Nav -->
+                <button class="hamburger" onclick="toggleMenu()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <nav id="mobileNav" class="mobile-nav">
+                    <a href="about.html">About Us</a>
+                    <a href="designer-access.html">Designer access</a>
+                    <a href="become-a-vendor.html">Become a Vendor</a>
+                    <a href="terms-of-service.html">Terms of Service</a>
+                </nav>
+            </div>
+        </div>
+
+        <!-- About Page Content -->
+        <section class="about-hero">
+            <h1 class="about-title">About Tapestral</h1>
+            <p class="about-tagline">Elevating design. Simplifying sourcing.</p>
+        </section>
+
+        <section class="about-content">
+            <div class="about-text">
+                <h2>Our Mission</h2>
+                <p>
+                    Tapestral is built to empower interior designers by streamlining access to curated, high-quality
+                    furniture direct from vendors.
+                    We eliminate friction in sourcing, quoting, and order management — so you can stay focused on
+                    delivering exceptional spaces.
+                </p>
+
+                <h2>What We Offer</h2>
+                <ul>
+                    <li>Direct-to-designer access to vetted vendors</li>
+                    <li>The Gallery, organize and present curated selections</li>
+                    <li>Transparent order tracking and downloadable documents</li>
+                    <li>Simple pricing, clear terms, and designer-focused service</li>
+                </ul>
+
+                <h2>Our Founders</h2>
+                <div class="founder-cards">
+                    <div class="founder-card">
+                        <h3>Kenny Goodin</h3>
+                        <p class="founder-title">Chief Technology Officer</p>
+                        <p>
+                            With a decade of experience in software engineering, Kenny specializes in developing
+                            high-performance systems
+                            and scalable platforms. From real-time applications to infrastructure design, his focus
+                            ensures Tapestral runs fast,
+                            reliably, and securely.
+                        </p>
+                    </div>
+                    <div class="founder-card">
+                        <h3>Dylan LaMott</h3>
+                        <p class="founder-title">Chief Strategy Officer</p>
+                        <p>
+                            Combining a background in cybersecurity and logistics, Dylan brings operational expertise
+                            and deep industry insight
+                            from years working with vendors and scaling supply chains. He ensures Tapestral is built to
+                            serve real business to business needs.
+                        </p>
+                    </div>
+                </div>
+
+                <p class="combined-exp">
+                    With over 15 years of combined experience in software, logistics, and security, the Tapestral
+                    founding team is uniquely positioned
+                    to bring speed, trust, and clarity to the furniture sourcing process.
+                </p>
+            </div>
+        </section>
+
+        <section class="about-footer">
+            <p>Questions? Reach out at <a href="mailto:support@tapestral.com">support@tapestral.com</a></p>
+        </section>
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="footer-links">
+                    <a href="about.html">About Us</a>
+                    <a href="designer-access.html">Designer access</a>
+                    <a href="become-a-vendor.html">Become a Vendor</a>
+                    <a href="terms-of-service.html">Terms of Service</a>
+                </div>
+                <div class="footer-copy">
+                    &copy; <span id="year"></span> Tapestral. All rights reserved.
+                </div>
+            </div>
+        </footer>
     </div>
+    <script>
+        // Year auto-update
+        document.getElementById("year").textContent = new Date().getFullYear();
 
-    <!-- About Page Content -->
-    <section class="about-hero">
-      <h1 class="about-title">About Tapestral</h1>
-      <p class="about-tagline">Elevating design. Simplifying sourcing.</p>
-    </section>
+        // Toggle mobile nav
+        function toggleMenu() {
+            const nav = document.getElementById("mobileNav");
+            const burger = document.querySelector(".hamburger");
 
-    <section class="about-content">
-      <div class="about-text">
-        <h2>Our Mission</h2>
-        <p>
-          Tapestral is built to empower interior designers by streamlining access to curated, high-quality furniture direct from vendors.
-          We eliminate friction in sourcing, quoting, and order management — so you can stay focused on delivering exceptional spaces.
-        </p>
-
-        <h2>What We Offer</h2>
-        <ul>
-          <li>Direct-to-designer access to vetted vendors</li>
-          <li>The Gallery, organize and present curated selections</li>
-          <li>Transparent order tracking and downloadable documents</li>
-          <li>Simple pricing, clear terms, and designer-focused service</li>
-        </ul>
-
-        <h2>Our Founders</h2>
-        <div class="founder-cards">
-          <div class="founder-card">
-            <h3>Kenny Goodin</h3>
-            <p class="founder-title">Chief Technology Officer</p>
-            <p>
-              With a decade of experience in software engineering, Kenny specializes in developing high-performance systems 
-              and scalable platforms. From real-time applications to infrastructure design, his focus ensures Tapestral runs fast, 
-              reliably, and securely.
-            </p>
-          </div>
-          <div class="founder-card">
-            <h3>Dylan LaMott</h3>
-            <p class="founder-title">Chief Strategy Officer</p>
-            <p>
-              Combining a background in cybersecurity and logistics, Dylan brings operational expertise and deep industry insight 
-              from years working with vendors and scaling supply chains. He ensures Tapestral is built to serve real business to business needs.
-            </p>
-          </div>
-        </div>
-
-        <p class="combined-exp">
-          With over 15 years of combined experience in software, logistics, and security, the Tapestral founding team is uniquely positioned 
-          to bring speed, trust, and clarity to the furniture sourcing process.
-        </p>
-      </div>
-    </section>
-
-    <section class="about-footer">
-      <p>Questions? Reach out at <a href="mailto:support@tapestral.com">support@tapestral.com</a></p>
-    </section>
-    <footer class="footer">
-      <div class="footer-content">
-        <div class="footer-links">
-          <a href="about.html">About Us</a>
-          <a href="terms-of-service.html">Terms of Service</a>
-        </div>
-        <div class="footer-copy">
-          &copy; <span id="year"></span> Tapestral. All rights reserved.
-        </div>
-      </div>
-    </footer>
-  </div>
-  <script>
-    // Year auto-update
-    document.getElementById("year").textContent = new Date().getFullYear();
-
-    // Toggle mobile nav
-    function toggleMenu() {
-        const nav = document.getElementById("mobileNav");
-        const burger = document.querySelector(".hamburger");
-        
-        nav.classList.toggle("open");
-        burger.classList.toggle("active");
-    }
-  </script>
+            nav.classList.toggle("open");
+            burger.classList.toggle("active");
+        }
+    </script>
 </body>
+
 </html>
