--- a/designer-access.html
+++ b/designer-access.html
@@ -301,7 +301,7 @@
 
         <main>
             <h2>Stay informed on Tapestral</h2>
-            <p style="text-align: center;">Complete the below form to be notified when Tapestral is launched anre ready
+            <p style="text-align: center;">Complete the below form to be notified when Tapestral is launched and ready
                 to go!</p>
             <div class="form-wrapper">
                 <iframe
